--- a/src/index.pug
+++ b/src/index.pug
@@ -4,6 +4,7 @@ html(lang="en")
         meta(charset="UTF-8")
         meta(name="viewport", content="width=device-width, initial-scale=1.0")
         title Document
-        h1 Hello world
-        img(src=require("./images/unnamed.jpg").default)
     body
+        h1 Hello world
+        .target i'm target
+        img(src=require("./images/unnamed.jpg").default)
