--- a/src/index.pug
+++ b/src/index.pug
@@ -3,8 +3,23 @@ html(lang="en")
     head
         meta(charset="UTF-8")
         meta(name="viewport", content="width=device-width, initial-scale=1.0")
+        <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
         title Document
     body
         h1 Hello world
-        .target i'm target
-        img(src=require("./images/unnamed.jpg").default)
+        -
+            let list = ['спальни', 'кровати', 'ванные комнаты']
+        .dropdown
+            .dropdown__input
+                input(class="dropdown__amount" type="text", name="")
+                span(class="dropdown__extend material-icons") keyboard_arrow_down
+            .dropdown__fields
+                each item in list
+                    .dropdown__field    
+                        span(class="dropdown__category")= item
+                        .dropdown__change-panel    
+                            span(class="dropdown__substract") -
+                            span(class="dropdown__number") 0
+                            span(class="dropdown__add") +
+            
+        img.image(src=require("./images/unnamed.jpg").default)
