--- a/src/style.sass
+++ b/src/style.sass
@@ -1,122 +1,6 @@
 @import "~normalize.css"
-@import "./components/range-slider/range-slider"
 @import '~material-icons/iconfont/material-icons.scss'
 @import './fonts/fonts'
 
-$dropdown__input-width: 214px
-$border-color: 1px solid rgba(31, 32, 65, 0.25)
-$background-color: #FFFFFF
-$border-radius: 2px
-$dropdown__fields-width: $dropdown__input-width
-
-body, *, *::after, *::before, :root
-    box-sizing: border-box
-
-
-.dropdown
-    margin: 10px
-.dropdown__input
-    width: $dropdown__input-width
-    height: 35px
-    background: $background-color
-    border: $border-color
-    box-sizing: border-box
-    border-radius: $border-radius
-    display: flex
-    align-items: center
-    padding-left: 10px
-    padding-right: 7px
-    justify-content: space-between
-
-    & .dropdown__amount
-        width: 128px
-        height: 24px
-        font-family: Montserrat
-        font-style: normal
-        font-weight: normal
-        font-size: 11px
-        line-height: 24px
-        color: rgba(31, 32, 65, 0.75)
-        overflow: hidden
-        text-overflow: ellipsis
-        border: none
-        letter-spacing: 0.1px
-    
-    & .dropdown__extend 
-        height: 89%
-        font-style: normal
-        font-weight: normal
-        font-size: 20px
-        line-height: 22px
-        color: rgba(31, 32, 65, 0.75)
-        text-align: center
-        display: flex
-        align-items: center
-        justify-content: center
-        cursor: pointer
-.dropdown__fields
-    width: $dropdown__fields-width
-    background: #FFFFFF
-    border: 1px solid rgba(31, 32, 65, 0.5)
-    border-radius: $border-radius
-    padding-left: 11px
-    padding-right: 5px
-    padding-top: 3px
-    // padding-bottom: 7px
-
-    .dropdown__field
-        display: flex
-        justify-content: space-between
-        align-items: center
-        margin-bottom: 5.5px
-
-        .dropdown__change-panel
-            display: flex
-            align-items: center
-            justify-content: space-between
-            flex-basis: 38%
-
-        .dropdown__category
-            line-height: 15px
-            font-size: 9px
-            color: #1F2041
-            font-family: Montserrat
-            font-weight: bold
-            text-transform: uppercase
-            letter-spacing: 0.5px
-        
-        .dropdown__substract
-            width: 24px
-            height: 24px
-            font-family: Montserrat
-            font-size: 9px
-            line-height: 22px
-            display: flex
-            align-items: center
-            justify-content: center
-            border: 1px solid rgba(31, 32, 65, 0.25)
-            border-radius: 22px
-            color: rgba(31, 32, 65, 0.5)
-
-        .dropdown__number
-            font-family: Montserrat
-            font-style: normal
-            font-weight: bold
-            font-size: 9px
-            line-height: 15px
-            text-align: center
-            text-transform: uppercase
-            color: #1F2041
-
-        .dropdown__add
-            width: 24px
-            height: 24px
-            border: 1px solid rgba(31, 32, 65, 0.25)
-            border-radius: 22px
-            font-family: Montserrat
-            font-size: 11px
-            line-height: 22px
-            display: flex
-            align-items: center
-            justify-content: center
-            color: rgba(31, 32, 65, 0.5)
+body, *
+    box-sizing
