--- a/src/style.scss
+++ b/src/style.scss
@@ -2,3 +2,15 @@
 @import "~material-icons/iconfont/material-icons.scss";
 @import "./fonts/fonts";
 
+*,
+*::before,
+*::after {
+    margin: 0;
+    padding: 0;
+    box-sizing: inherit;
+}
+
+:root {
+    font-size: 10px;
+    box-sizing: border-box
+}
