added html and styles for the toggle

--- a/src/index.pug
+++ b/src/index.pug
@@ -6,4 +6,8 @@ html(lang="en")
         <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
         title Document
     body
-     
+        div    
+            label.switch
+                input.checkbox(type="checkbox")
+                span.slider
+            span switch 1
