added air-datepicker from jquery-ui

--- a/src/index.pug
+++ b/src/index.pug
@@ -6,3 +6,5 @@ html(lang="en")
         <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
         title Document
     body
+        
+        input.calendar(type="text", name="")
