--- a/src/style.scss
+++ b/src/style.scss
@@ -2,6 +2,8 @@
 @import "~material-icons/iconfont/material-icons.scss";
 @import "./fonts/fonts";
 
+@import "./UI_kit/form-elements/components/range-slider/range-slider.sass";
+
 *,
 *::before,
 *::after {
