fix url image and added mixin in checkbox

--- a/src/UI_kit/form-elements/components/checkbox/checkbox.pug
+++ b/src/UI_kit/form-elements/components/checkbox/checkbox.pug
@@ -1,3 +1,4 @@
- label.checkbox   
-            input(type="checkbox" class="checkbox__select")
-            span(class="checkbox__name") Моadasdsasadasd
+mixin checkbox(options)
+    label.checkbox   
+        input(type="checkbox" class="checkbox__select")
+        span(class="checkbox__name")= options.text
