--- a/src/style.scss
+++ b/src/style.scss
@@ -1,8 +1,7 @@
 @import "~normalize.css";
 @import "~material-icons/iconfont/material-icons.scss";
 @import "./fonts/fonts";
-
-@import "./UI_kit/form-elements/components/range-slider/range-slider.sass";
+// @import 'FEcomponents/';
 
 *,
 *::before,
