changed classes in toggle html and changed css rules priority(nesting)

--- a/src/UI_kit/form-elements/components/like/like.scss
+++ b/src/UI_kit/form-elements/components/like/like.scss
@@ -12,7 +12,7 @@
 }
 
 .like {
-    display: flex;
+    display: inline-flex;
     position: relative;
     background:rgba(31, 32, 65, 0.25);
     border-radius: 30px;
