--- a/src/index.pug
+++ b/src/index.pug
@@ -6,6 +6,7 @@ html(lang="en")
         <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
         title Document
     body
-    //- include UI_kit/form-elements/components/
+    include UI_kit/form-elements/components/toggle/toggle
+    +toggle({text:"Получать спецпредложения"})
 
       
