--- a/src/UI_kit/form-elements/components/toggle/toggle.scss
+++ b/src/UI_kit/form-elements/components/toggle/toggle.scss
@@ -11,48 +11,60 @@
     box-sizing: border-box
 }
 
-.checkbox {
-    display: none;
-}
-
 .switch {
-    width: 60px;
-    height: 30px;
-    display: inline-block;
-    margin: 8px;
-    transform: translateY(50%);
-    position: relative;
-}
+    display: inline-flex;
+    &__btn {
+        width: 29px;
+        height: 14px;
+        display: inline-block;
+        position: relative;
+    }
 
-.slider {
-    position: absolute;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    border-radius: 30px;
-    box-shadow: 0 0 0 2px #BC9CFF, 0 0 4px #BC9CFF; 
-    border: 4px solid transparent;
-    overflow: hidden;
-    cursor: pointer;
-}
+    &__handle {
+        position: absolute;
+        top: 0;
+        bottom: 0;
+        left: 0;
+        right: 0;
+        border-radius: 30px;
+        box-shadow: 0 0 0 1px rgba(31, 32, 65, 0.25), 0 0 4px rgba(31, 32, 65, 0.25);
+        border: 2px solid transparent;
+        overflow: hidden;
+        cursor: pointer;
 
-.slider::before {
-    position: absolute;
-    content: '';
-    width: 42%;
-    height: 100%;
-    background: linear-gradient(180deg, #BC9CFF 0%, #8BA4F9 100%);
-    border-radius: 30px;
-    transform: translateX(30px);
-    transition: all ease .1s;
-}
+        &::before {
+            position: absolute;
+            content: "";
+            width: 42%;
+            height: 99%;
+            background: rgba(31, 32, 65, 0.25);
+            border-radius: 30px;
+            transform: translateX(0px);
+            transition: all ease 0.2s;
+        }
+    }
 
-.checkbox:checked + .slider::before {
-    background: rgba(31, 32, 65, 0.25);
-    transform: translateX(0px);
-}
+    &__checkbox {
+       display: none;
+       
+       &:checked + .switch__handle::before{
+            background: linear-gradient(180deg, #BC9CFF 0%, #8BA4F9 100%);
+            transform: translateX(14px);
+       }
 
-.checkbox:checked + .slider {
-    box-shadow: 0 0 0 2px rgba(31, 32, 65, 0.25), 0 0 4px rgba(31, 32, 65, 0.25);
+       &:checked + .switch__handle {
+            box-shadow: 0 0 0 1px #BC9CFF, 0 0 4px #BC9CFF;
+       }
+    }
+
+    &__text {
+        margin-left: 8px;
+        font-family: Montserrat;
+        font-style: normal;
+        font-weight: normal;
+        font-size: 12px;
+        line-height: 12px;
+        letter-spacing: -.5px;
+        color: rgba(31, 32, 65, 0.75); 
+    }
 }
