--- a/src/style.scss
+++ b/src/style.scss
@@ -1,7 +1,7 @@
 @import "~normalize.css";
 @import "~material-icons/iconfont/material-icons.scss";
 @import "./fonts/fonts";
-// @import 'FEcomponents/';
+@import 'FEcomponents/toggle/toggle';
 
 *,
 *::before,
