--- a/src/UI_kit/form-elements/components/toggle/toggle.pug
+++ b/src/UI_kit/form-elements/components/toggle/toggle.pug
@@ -1,7 +1,7 @@
 mixin toggle(options) 
     .switch 
         label.switch__btn
-            input.switch__checkbox(type="checkbox")
+            input.switch__checkbox(type="checkbox" checked=`${options.checked || false}`)
             span.switch__handle
         span.switch__text= options.text 
         
