--- a/src/index.pug
+++ b/src/index.pug
@@ -6,7 +6,9 @@ html(lang="en")
         <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
         title Document
     body
-    include UI_kit/form-elements/components/toggle/toggle
-    +toggle({text:"Получать спецпредложения"})
+    include UI_kit/form-elements/components/dropdown/dropdown
+    +dropdown({size: 'medium', type: 'default', placeholder: "ДД.ММ.ГГГГ", title: "date dropdown"})
+
+
 
       
