--- a/src/UI_kit/cards/components/calendar/calendar.scss
+++ b/src/UI_kit/cards/components/calendar/calendar.scss
@@ -17,18 +17,16 @@
 }
 .datepicker-inline {
     position: relative;
-    margin-left: 10px;
-    position: relative;
-    width: 254px;
 
     .datepicker {
         position: absolute;
-        top: 0;
-        width: 100%;
+        top: 5px;
+        left: 0px;
         background: #FFFFFF;
         border: 1px solid rgba(31, 32, 65, 0.25);
         box-shadow: 0px 10px 20px rgba(31, 32, 65, 0.05);
         border-radius: 4px;
+        z-index: 999;
         
         &--content {
             padding: 3px 0px 0px 11px;
@@ -130,14 +128,11 @@
                 opacity: 0.25;
                 z-index: -1;
             }
-
-            // &.-range-from::after {border: 0;}
+            
             &.-range-from-::after {
-                // border: 0;
                 border-radius: 50% 0 0 50%;
             }
 
-            // &.-range-to-::after {border: 0;}
             &.-range-to-::after {
                 border: 0;
                 border-radius: 0 50% 50% 0;
