--- a/src/UI_kit/form-elements/components/text-field/text-field.pug
+++ b/src/UI_kit/form-elements/components/text-field/text-field.pug
@@ -1,6 +1,17 @@
-        mixin text-field(options)
-            if (!options) 
-                -var options = {type: 'text', placeholder: ''}     
-            
-            input.text-field(type=`${options.type || 'text'}` placeholder=`${options.placeholder || ''}`)
-        +text-field({placeholder: '1'}  )    
+mixin text-field(options)
+    if (!options) 
+        -var options = {type: "text", placeholder: "ДД.ММ.ГГГГ", dataType: "masked", size: 'large'} 
+    -
+        let className = "field"
+
+    div(class=`${className} field_size_${options.size}`)
+        input(type=`${options.type || 'text'}` placeholder=`${options.placeholder || ''}` data-type=options.dataType class="text-field")
+        if (options.arrow)
+        svg(class="field__arrow" width="18" height="18" viewBox="0 0 18 18" xmlns="http://www.w3.org/2000/svg")
+            path(d="M9 0.984375L17.0156 9L9 17.0156L7.59375 15.6094L13.1719 9.98438H0.984375V8.01562H13.1719L7.59375 2.39062L9 0.984375Z" fill="url(#gradient)")
+            defs
+                linearGradient(id="gradient" x1="9" y1="-13" x2="9" y2="31" gradientUnits="userSpaceOnUse")
+                    stop(stop-color="#BC9CFF")
+                    stop(offset="1" stop-color="#8BA4F9")
+
+
