--- a/src/style.scss
+++ b/src/style.scss
@@ -1,7 +1,8 @@
 @import "~normalize.css";
 @import "~material-icons/iconfont/material-icons.scss";
 @import "./fonts/fonts";
-@import 'FEcomponents/toggle/toggle';
+@import 'FEcomponents/dropdown/dropdown';
+@import './UI_kit/cards/components/calendar/calendar';
 
 *,
 *::before,
