--- a/src/index.pug
+++ b/src/index.pug
@@ -7,7 +7,7 @@ html(lang="en")
         title Document
     body
     include UI_kit/form-elements/components/dropdown/dropdown
-    +dropdown({size: 'medium', type: 'default', placeholder: "ДД.ММ.ГГГГ", title: "date dropdown"})
+    +dropdown({size: 'large', type: 'default', placeholder: "Сколько номеров", title: "date dropdown", buttons: true})
 
 
 
