--- a/src/index.pug
+++ b/src/index.pug
@@ -6,9 +6,7 @@ html(lang="en")
         <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
         title Document
     body
-    include UI_kit/form-elements/components/dropdown/dropdown
-    +dropdown({size: 'large', type: 'default', placeholder: "Сколько номеров", title: "date dropdown", buttons: true})
-
+    //- include UI_kit/form-elements/components/checkbox/checkbox
 
 
       
