--- a/src/style.scss
+++ b/src/style.scss
@@ -1,8 +1,7 @@
 @import "~normalize.css";
 @import "~material-icons/iconfont/material-icons.scss";
 @import "./fonts/fonts";
-@import 'FEcomponents/dropdown/dropdown';
-@import './UI_kit/cards/components/calendar/calendar';
+// @import 'FEcomponents/checkbox/checkbox';
 
 *,
 *::before,
