--- a/src/style.scss
+++ b/src/style.scss
@@ -1,7 +1,7 @@
 @import "~normalize.css";
 @import "~material-icons/iconfont/material-icons.scss";
 @import "./fonts/fonts";
-// @import 'FEcomponents/like/like';
+// @import 'FEcomponents/dropdown/dropdown';
 
 *,
 *::before,
@@ -14,4 +14,5 @@
 :root {
     font-size: 10px;
     box-sizing: border-box;
+    background: #E5E5E5;
 }
