refactoring button, dropdown. Added styles and html for the booking.

--- a/src/style.scss
+++ b/src/style.scss
@@ -1,7 +1,8 @@
 @import "~normalize.css";
 @import "~material-icons/iconfont/material-icons.scss";
 @import "./fonts/fonts";
-// @import 'FEcomponents/dropdown/dropdown';
+@import 'FEcomponents/dropdown/dropdown';
+@import 'FEcomponents/button/button';
 
 *,
 *::before,
