refactoring button, radio, field, toggle. Added styles and html for the registration form.

--- a/src/UI_kit/form-elements/components/radio/radio.pug
+++ b/src/UI_kit/form-elements/components/radio/radio.pug
@@ -1,4 +1,4 @@
-mixin radio(options) 
+mixin radio(options = {text: 'Пол не определен', name: 'default'}) 
     if (!options)
         -var options = {text: 'Пол не определен', name: 'default'}
         
