--- a/src/style.scss
+++ b/src/style.scss
@@ -1,11 +1,11 @@
 @import "~normalize.css";
 @import "~material-icons/iconfont/material-icons.scss";
 @import "./fonts/fonts";
-// @import 'FEcomponents/field/field';
-// @import 'FEcomponents/button/button';
-// @import 'FEcomponents/toggle/toggle';
-// @import 'FEcomponents/radio/radio';
-// @import "root/UI_kit/cards/components/calendar/calendar";
+@import 'FEcomponents/field/field';
+@import 'FEcomponents/button/button';
+@import 'FEcomponents/toggle/toggle';
+@import 'FEcomponents/radio/radio';
+@import "root/UI_kit/cards/components/calendar/calendar";
 
 *,
 *::before,
