added styles and html for the room block in cards section.

--- a/src/UI_kit/form-elements/components/rate/rate.pug
+++ b/src/UI_kit/form-elements/components/rate/rate.pug
@@ -1,4 +1,4 @@
-mixin rate(options)
+mixin rate(options = {amount: 5, fill: 5})
     .rate
         -let amount = options.amount || 5;
         -for(let i = 1; i <= amount; i++)
