--- a/src/style.scss
+++ b/src/style.scss
@@ -1,7 +1,7 @@
 @import "~normalize.css";
 @import "~material-icons/iconfont/material-icons.scss";
 @import "./fonts/fonts";
-// @import 'FEcomponents/button/button';
+@import 'FEcomponents/button/button';
 // @import 'FEcomponents/rate/rate';
 // @import "root/UI_kit/cards/components/calendar/calendar";
 
@@ -17,107 +17,4 @@
     font-size: 10px;
     box-sizing: border-box;
     background: #E5E5E5;
-}
-
-.room {
-    $root: &;
-
-    background: #FFFFFF;
-    box-shadow: 0px 10px 20px rgba(31, 32, 65, 0.05);
-    border-radius: 4px;
-    max-width: 216px;
-    margin: 50px;
-    padding-bottom: 15px;
-
-
-    &__preview {
-        width: 100%;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        border-top-right-radius: 4px;
-        border-top-left-radius: 4px;
-        margin-bottom: 18px;
-
-        #{$root}__preview-img {
-            width: 100%;
-            border-top-right-radius: 4px;
-            border-top-left-radius: 4px;
-        }
-    }
-
-    &__info {
-        display: flex;
-        align-items: center;
-        margin-left: 16px;
-        margin-right: 13px;
-        border-bottom: 1px solid rgba(31, 32, 65, 0.1);
-        padding-bottom: 8px;
-        margin-bottom: 7px;
-     
-
-        #{$root}__number {
-            font-family: Montserrat;
-            font-style: normal;
-            font-weight: bold;
-            font-size: 13px;
-            line-height: 17px;
-            color: #1F2041;
-
-            #{$root}__info-icon {
-                font-size: 10px;
-                line-height: 17px;
-                margin-right: 5px;
-            }
-        }
-
-        #{$root}__type {
-            margin-left: -20px;
-            padding-top: 3px;
-            margin-right: 2px;
-        }
-        
-        #{$root}__price {
-            font-family: Montserrat;
-            font-style: normal;
-            font-weight: bold;
-            font-size: 11px;
-            line-height: 18px;
-            color: rgba(31, 32, 65, 0.5);
-
-            #{$root}__price-time {
-                font-size: 10px;
-                font-weight: 400;
-                letter-spacing: -0.2px;
-            }
-        }
-    }
-
-    &__characteristic {
-        display: flex;
-        margin-left: 18px;
-        margin-right: 18px;
-        justify-content: space-between;
-
-        #{$root}__review {
-            font-family: Montserrat;
-            font-style: normal;
-            font-weight: bold;
-            font-size: 11px;
-            line-height: 18px;
-            text-align: right;
-            color: rgba(31, 32, 65, 0.5);
-
-            #{$root}__review-number {
-                font-weight: 700;
-                margin-right: 4px;
-            }
-
-            #{$root}__review-text {
-                font-weight: 400;
-                letter-spacing: -0.1px;
-            }
-
-        }
-    }
 }
